--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "happy-birthday",
   "version": "1.0.0",
-  "description": "An app that let's you say happy birthday to your friend in a nerdy way.",
+  "description": "happy birthday Website.",
   "main": "index.js",
   "devDependencies": {
     "browser-sync": "^2.18.13",
-    "run-script-os": "^1.0.2"
+    "run-script-os": "^1.1.6"
   },
   "scripts": {
     "start": "run-script-os",
@@ -22,11 +22,10 @@
     "Happy",
     "Birthday"
   ],
-  "author": "Afiur Rahman Fahim",
+  "author": "Rehan",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/faahim/happy-birthday/issues"
   },
-  "homepage": "https://github.com/faahim/happy-birthday#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/faahim/happy-birthday#readme"
 }
